[package]
name = "rilistarr"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.42.0", features = ["full"] }
poise = "0.6.1"
serenity = { version = "0.12.4", features = ["cache", "framework", "standard_framework"] }
chrono = "0.4.39"
tokio-util = "0.7.13"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
urlencoding = "2.1.3"
image = "0.25"
ab_glyph = "0.2"
imageproc = "0.25"
font-kit = "0.14"
